# netforge-pro

./: .coverage  .gitignore  .graphify_detect.json  Historique_Conversations.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/skills/backend-dev/: SKILL.md
.claude/skills/devops/: SKILL.md
.claude/skills/frontend-dev/: SKILL.md
.claude/skills/network-parser/: SKILL.md
.claude/skills/saas-growth/: SKILL.md
docs/: CDC_NetForge_Pro_v2 (1).md  CDC_NetForge_Pro_v2.md  CLAUDE_CODE_INSTRUCTIONS.md  NetForge_CDC_Enrichissements_v3 - Copie.md  NetForge_Enrichissements_v4_Icons_SaaS.md  NetForge_Instructions_Claude_Code.md  NetForge_Pro_Prompts_Developpement_v2 - Copie.md  catalyst_9200.md  catalyst_9300.md  📊 Progression NetForge Pro.md
netforge-pro/: .env.example  .gitignore  .mcp.json  README.md
netforge-pro/docs/: 📊 Progression NetForge Pro.md
netforge-pro/scripts/: create-netforge-pro.ps1
src/api_backend/: __init__.py  config.py  main.py
src/api_backend/api/: routes.py
src/api_backend/models/: user.py
src/api_backend/services/: user_service.py
src/api_backend/tests/: conftest.py  test_auth.py  test_health.py
src/api_backend/utils/: auth.py  database.py  redis.py
src/discovery_engine/: README.md  __init__.py  config.py
src/discovery_engine/api/: __init__.py  routes.py
src/discovery_engine/models/: __init__.py  discovery.py
src/discovery_engine/services/: __init__.py  fingerprinter.py  scanner.py  snmp_discovery.py  topology.py
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.tsx  index.css
src/graph_database/: README.md  __init__.py  config.py
src/netforge_pro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/parser_engine/: __init__.py  config.py
src/rule_engine/: __init__.py  config.py
(+80 files in other folders)
